WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129129
DFG should do its own static estimates of execution frequency before it starts creating OSR entrypoints
https://bugs.webkit.org/show_bug.cgi?id=129129
Summary
DFG should do its own static estimates of execution frequency before it start...
Filip Pizlo
Reported
2014-02-20 16:46:08 PST
Patch forthcoming.
Attachments
the patch
(26.55 KB, patch)
2014-02-20 17:00 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-02-20 17:00:31 PST
Created
attachment 224809
[details]
the patch
WebKit Commit Bot
Comment 2
2014-02-20 17:01:55 PST
Attachment 224809
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGBasicBlock.cpp:53: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 1 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2014-02-20 17:10:54 PST
Comment on
attachment 224809
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=224809&action=review
r=me
> Source/JavaScriptCore/ChangeLog:15 > + This is better than letting LLVM do its own static estimates, since by the time we > + generate LLVM IR, we may have messed up the CFG due to OSR entrypoint creation. Of > + course, it would be even better if we just slurped in some kind of execution counts > + from profiling, but we don't do that, yet.
Do want.
Filip Pizlo
Comment 4
2014-02-20 17:15:47 PST
Landed in
http://trac.webkit.org/changeset/164459
Filip Pizlo
Comment 5
2014-02-23 19:54:45 PST
***
Bug 129055
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug