Source/JavaScriptCore/dfg/DFGCriticalEdgeBreakingPhase.cpp
@@ -73,7 +73,9 @@ public:
 private:
     void breakCriticalEdge(BasicBlock* predecessor, BasicBlock** successor)
     {
-        BasicBlock* pad = m_insertionSet.insertBefore(*successor);
+        // Note that we pass NaN for the count of the critical edge block, because we honestly
+        // don't know its execution frequency.
+        BasicBlock* pad = m_insertionSet.insertBefore(*successor, QNaN);
         pad->appendNode(
             m_graph, SpecNone, Jump, (*successor)->at(0)->origin, OpInfo(*successor));
         pad->predecessors.append(predecessor);
